[package]
name = "sdd"
version = "0.0.1"
authors = ["Lukas Vilim <lukas.vilim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.8"

[dependencies.rusqlite]
version = "0.24.0"
features = ["bundled"]
